--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -49,5 +49,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: virendras19/dotnettemplate:latest
+        tags: virendras19/dotnettemplate:latest, virendras19/dotnettemplate:${{ github.sha }}
 
